--- a/src/styles.css
+++ b/src/styles.css
@@ -76,8 +76,8 @@ img {
   width: 48px;
   height: 48px;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
-  background-size: 40%;
+  background-image: url('https://www.svgrepo.com/show/127033/magnifying-glass.svg');
+  background-size: 50%;
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.6;
